--- a/Docker Compose/pwndrop.docker-compose.yml
+++ b/Docker Compose/pwndrop.docker-compose.yml
@@ -11,19 +11,24 @@ services:
     hostname: file-share
 
     environment:
-      - TZ=America/New_York
-      - SECRET_PATH=/pwndrop-adm
+      - TZ=America/New_York #Set host Timezone
+      - SECRET_PATH=/pwndrop-adm # set web path for Pwndrop login 
 
     volumes:
-      - pwndrop_config:/config
+      - pwndrop_config:/config #Persist Pwndrop config in docker volume
 
     labels:
+      #Enable monitoring with Traefik Proxy
       - traefik.enable=true"
+      #Configure traefilk Proxy Route
       - traefik.http.routers.pwndrop-entry.rule=Host(`drop.tools.local`)
       - traefik.http.routers.pwndrop-entry.entrypoints=websecure
-      - traefik.http.services.pwndrop-entry.loadbalancer.server.port=8080
       - traefik.http.routers.pwndrop-entry.service=pwndrop-entry
       - traefik.http.routers.pwndrop-entry.tls=true
+      - traefik.http.routers.pwndrop-entry.middlewares=error-pages-middleware@docker # Enable Custom Errorpages for Router
+        #Configure host services in Traefik Proxy 
+      - traefik.http.services.pwndrop-entry.loadbalancer.server.port=8080
+      #Enable auto image updates with Watchtower 
       - com.centurylinklabs.watchtower.enable=true # Enable image update from watchtower 
 
     restart: unless-stopped
