--- a/Docker Compose/apache-guacamole.docker-compose.yml
+++ b/Docker Compose/apache-guacamole.docker-compose.yml
@@ -12,18 +12,23 @@ services:
     hostname: guacamole
 
     environment:
-      - TZ=America/New_York
+      - TZ=America/New_York #Set host Timezone
 
     volumes:
-      - postgres:/config
+      - postgres:/config #Persist Postgres DB in docker Volume
 
     labels:
+      #Enable monitoring with Traefik Proxy
       - traefik.enable=true
+      #Configure traefilk Proxy Route 
       - traefik.http.routers.apache-guac.entrypoints=websecure
       - traefik.http.routers.apache-guac.rule=Host(`gateway.tools.local`)
       - traefik.http.routers.apache-guac.tls=true
       - traefik.http.routers.apache-guac.service=apache-guac
+      - traefik.http.routers.apache-guac.middlewares=error-pages-middleware@docker # Enable Custom Errorpages for Router
+      #Configure host services in Traefik Proxy   
       - traefik.http.services.apache-guac.loadbalancer.server.port=8080
+      #Enable auto image updates with Watchtower 
       - com.centurylinklabs.watchtower.enable=true
 
     restart: unless-stopped
