--- a/Docker Compose/portainer-ce.docker-compose.yml
+++ b/Docker Compose/portainer-ce.docker-compose.yml
@@ -11,31 +11,38 @@ services:
       hostname: portainer
 
       environment:
-        - TZ=America/New_York
+        - TZ=America/New_York #Set host Timezone
 
       command: -H unix:///var/run/docker.sock #start portainer with access to local docker socket 
     
       volumes:
         - /var/run/docker.sock:/var/run/docker.sock # access to local docker socket to monitor docker labels 
-        - portainer_data:/data
+        - portainer_data:/data #Persist Portainer DB in docker volume
 
-      labels:
-        # Frontend
-        - "traefik.enable=true"
-        - "traefik.http.routers.portainer-frontend.rule=Host(`docker.tools.local`)"
-        - "traefik.http.routers.portainer-frontend.entrypoints=websecure"
-        - "traefik.http.services.portainer-frontend.loadbalancer.server.port=9000"
-        - "traefik.http.routers.portainer-frontend.service=portainer-frontend"
-        - "traefik.http.routers.portainer-frontend.tls=true"
-      
-        # Edge
-        - "traefik.http.routers.portainer-edge.rule=Host(`edge.docker.tools.local`)"
-        - "traefik.http.routers.portainer-edge.entrypoints=websecure"
-        - "traefik.http.services.portainer-edge.loadbalancer.server.port=8000"
-        - "traefik.http.routers.portainer-edge.service=portainer-edge"
-        - "traefik.http.routers.portainer-edge.tls=true"
-        
-        #other
-        - com.centurylinklabs.watchtower.enable=true # Enable image update from watchtower 
+      labels: 
+        #Enable monitoring with Traefik Proxy
+        - traefik.enable=true
+        # Frontend Service Configuration
+        #Configure traefilk Proxy Route
+        - traefik.http.routers.portainer-frontend.rule=Host(`docker.tools.local`)
+        - traefik.http.routers.portainer-frontend.entrypoints=websecure
+        - traefik.http.routers.portainer-frontend.service=portainer-frontend
+        - traefik.http.routers.portainer-frontend.tls=true
+        - traefik.http.routers.portainer-frontend.middlewares=error-pages-middleware@docker # Enable Custom Errorpages for Router
+        #Configure host services in Traefik Proxy 
+        - traefik.http.services.portainer-frontend.loadbalancer.server.port=9000
+
+        #Edge Connector Service Configuration (Optional config to support connection to additional docker and kubernetes services)
+        #Configure traefilk Proxy Route
+        - traefik.http.routers.portainer-edge.rule=Host(`edge.docker.tools.local`)
+        - traefik.http.routers.portainer-edge.entrypoints=websecure
+        - traefik.http.routers.portainer-edge.service=portainer-edge
+        - traefik.http.routers.portainer-edge.tls=true
+        - traefik.http.routers.portainer-edge.middlewares=error-pages-middleware@docker # Enable Custom Errorpages for Router
+        #Configure host services in Traefik Proxy 
+        - traefik.http.services.portainer-edge.loadbalancer.server.port=8000
+
+        #Enable auto image updates with Watchtower 
+        - com.centurylinklabs.watchtower.enable=true
 
   restart: unless-stopped
