--- a/Docker Compose/homer.docker-compose.yml
+++ b/Docker Compose/homer.docker-compose.yml
@@ -17,6 +17,7 @@ services:
     labels:
       #Enable monitoring with Traefik Proxy
       - traefik.enable=true
+      - traefik.docker.network=lab-dashboard_default # Configure Traefik to autojoin stack network
       #Configure traefilk Proxy Route
       - traefik.http.routers.dash-homer.entrypoints=websecure
       - traefik.http.routers.dash-homer.rule=Host(`tools.local`)
