revert change and apply nessus traefik update

--- a/Docker Compose/nessus_pro.docker-compose.yml
+++ b/Docker Compose/nessus_pro.docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - traefik.http.routers.nessus.service=nessus
       - traefik.http.routers.nessus.middlewares=error-pages-middleware@docker #Enable Custom Errorpages for Router
       #Configure host services in Traefik Proxy 
+      - traefik.http.services.nessus.loadbalancer.server.scheme=https
       - traefik.http.services.nessus.loadbalancer.server.port=8834
        #Disable auto image updates with Watchtower 
       - com.centurylinklabs.watchtower.enable=false
