update traefik static config to skip tls verify

--- a/Config Files/treafik.yml
+++ b/Config Files/treafik.yml
@@ -60,6 +60,9 @@ certificatesResolvers:
       httpChallenge:
         entryPoint: web
 
+serversTransport:
+  insecureSkipVerify: true
+  
 #Provider Configuration
 #---
 #TODO: Customize your Provider Settings if needed
